@@ -30,7 +30,7 @@ public class DatasetStatisticsPropertiesTest extends DatasetStatisticsTest {
     @Test
     public void testGetStats() {
         for (Map.Entry<String, Long> entry : executeBasicTest().entrySet()) {
-            assertEquals(new Long(0), entry.getValue());
+            assertEquals(Long.valueOf(0), entry.getValue());
         }
     }
 }
